[package]
name = "cyboquatic-drain-node"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Reference cyboquatic drain node implementing ecosafety corridors and Lyapunov-checked control."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
ecosafety-core = { path = "../ecosafety-core" }
qpudatashard-schema = { path = "../qpudatashard-schema" }
