[package]
name = "cyboquatic-ecosafety-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Ecosafety spine for Cyboquatic industrial machinery (Rx, Vt, KER, Dt, lanes)."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dependencies.ecosafety-core]
path = "../ecosafety-core"

[features]
default = []
