[package]
name = "qpudatashard-schema"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Shard types for cyboquatic ecosafety telemetry and certification."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ecosafety-core = { path = "../ecosafety-core" }
